cambio de logo y subida de links de linked in

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="website icon" type="png" href="../mi-plantilla-react/public/images/evolvera_logo_horizontal_blanco.png" />
+    <link rel="website icon" type="png" href="public/evolvera_logo_horizontal_blanco.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Evolvera Dev Group</title>
   </head>
